; ModuleID = '/home/carl/AnghaBench/Cinder/src/freetype/base/extr_ftpfr.c_ft_pfr_check.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/freetype/base/extr_ftpfr.c_ft_pfr_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PFR_METRICS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64)* @ft_pfr_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ft_pfr_check(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  store i64 %0, i64* %2, align 8
  store i32* null, i32** %3, align 8
  %4 = load i64, i64* %2, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @PFR_METRICS, align 4
  %10 = call i32 @FT_FACE_LOOKUP_SERVICE(i64 %7, i32* %8, i32 %9)
  br label %11

11:                                               ; preds = %6, %1
  %12 = load i32*, i32** %3, align 8
  ret i32* %12
}

declare dso_local i32 @FT_FACE_LOOKUP_SERVICE(i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
